Fix: Badges in sidenav
Badges float right and overlap any underlying text.

--- a/app/assets/stylesheets/side_navigation.scss
+++ b/app/assets/stylesheets/side_navigation.scss
@@ -81,6 +81,22 @@ div#desktop_side_navigation, ul#mobile_navigation {
 
   }
 
+  // styling for inline-badges
+  a > .badge {
+    display: block !important;
+    float: right !important;
+    margin-top: 13px;
+    height: unset !important;
+    line-height: 22px;
+  }
+
+  // ensure that content does not wrap or overflow
+  a > span.content {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
 }
 
 // fixed side nav for full screen views
